--- a/javascripts/discourse/components/custom-footer.hbs
+++ b/javascripts/discourse/components/custom-footer.hbs
@@ -1,15 +1,15 @@
 {{#if @showFooter}}
   <div class="wrap">
     <div class="flexbox">
-      <div class="first-box">
+      {{!-- <div class="first-box">
         <div class="heading">
           {{this.mainHeading}}
         </div>
         <div class="blurb">
           {{this.blurb}}
         </div>
-      </div>
-      <div class="second-box">
+      </div> --}}
+      {{!-- <div class="second-box">
         <PluginOutlet @name="easy-footer-second-box">
           <div class="links">
             {{#each (theme-setting "sections") as |section|}}
@@ -43,7 +43,7 @@
             {{/each}}
           </div>
         </PluginOutlet>
-      </div>
+      </div> --}}
 
       <div class="third-box">
         <div class="footer-links">
