--- a/common/common.scss
+++ b/common/common.scss
@@ -44,7 +44,7 @@
     width: 100%;
     display: flex;
     align-items: center;
-    border-top: 1px solid rgba(var(--primary-low-rgb), 0.05);
+    // border-top: 1px solid rgba(var(--primary-low-rgb), 0.05);
     .social {
       display: flex;
       flex-wrap: wrap;
