--- a/javascripts/discourse/components/custom-footer.hbs
+++ b/javascripts/discourse/components/custom-footer.hbs
@@ -47,7 +47,7 @@
 
       <div class="third-box">
         <div class="footer-links">
-          友情链接: 
+          本站友情链接: 
           {{#each (theme-setting "small_links") as |link|}}
             <a
               class="small-link"
